# fia

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: fia_dry_run.yml  fia_run.yml  reconcile.yml  stage1.yml  stage2.yml
brains/nb1/: __init__.py  core.py
brains/nb2/: core.py  helpers.py
brains/qb1/: __init__.py  core.py  helpers.py
brains/qb2/: __init__.py  core.py  helpers.py
brains/reconcile/: core.py
config/: README.md  defaults.json  schema.json  secrets_template.json  settings.json
fia/: __init__.py  config_loader.py  supabase_client.py
migrations/: 0001_initial.sql
runners/: __init__.py  reconcile_runner.py  stage1_runner.py  stage2_runner.py
stage2_service/: Dockerfile  fly.toml  main.py  requirements.txt
stage2_service/brains/nb1/: core.py  helpers.py
stage2_service/brains/nb2/: __init__.py  core.py
stage2_service/brains/qb1/: core.py
stage2_service/brains/qb2/: core.py
stage2_service/brains/reconcile/: __init__.py  core.py
stage2_service/config/: defaults.json
stage2_service/fia/: config_loader.py
tools/: audit_repo.py  migrate_supabase.sql  run_migrations.py  test_qb1_local.py  validate_config.py
